--- a/test/e2e/resources/multiple-infra-custom-ns-versions.yaml
+++ b/test/e2e/resources/multiple-infra-custom-ns-versions.yaml
@@ -45,7 +45,7 @@ metadata:
   name: capz-custom-ns
 ---
 # Source: cluster-api-operator/templates/infra-conditions.yaml
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: BootstrapProvider
 metadata:
   name: kubeadm
@@ -54,11 +54,12 @@ metadata:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
 spec:
-  secretName: test-secret-name
-  secretNamespace: test-secret-namespace
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/infra-conditions.yaml
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: ControlPlaneProvider
 metadata:
   name: kubeadm
@@ -67,11 +68,12 @@ metadata:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
 spec:
-  secretName: test-secret-name
-  secretNamespace: test-secret-namespace
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/infra-conditions.yaml
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: CoreProvider
 metadata:
   name: cluster-api
@@ -80,11 +82,12 @@ metadata:
     "helm.sh/hook": "post-install"
     "helm.sh/hook-weight": "2"
 spec:
-  secretName: test-secret-name
-  secretNamespace: test-secret-namespace
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/infra.yaml
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
   name: docker
@@ -94,11 +97,12 @@ metadata:
     "helm.sh/hook-weight": "2"
 spec:
   version: v1.4.2
-  secretName: test-secret-name
-  secretNamespace: test-secret-namespace
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
 ---
 # Source: cluster-api-operator/templates/infra.yaml
-apiVersion: operator.cluster.x-k8s.io/v1alpha1
+apiVersion: operator.cluster.x-k8s.io/v1alpha2
 kind: InfrastructureProvider
 metadata:
   name: azure
@@ -108,5 +112,6 @@ metadata:
     "helm.sh/hook-weight": "2"
 spec:
   version: v1.10.0
-  secretName: test-secret-name
-  secretNamespace: test-secret-namespace
+  configSecret:
+    name: test-secret-name
+    namespace: test-secret-namespace
