--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,27 +11,27 @@ resources:
 - bases/operator.cluster.x-k8s.io_runtimeextensionproviders.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_coreproviders.yaml
-- patches/webhook_in_bootstrapproviders.yaml
-- patches/webhook_in_controlplaneproviders.yaml
-- patches/webhook_in_infrastructureproviders.yaml
-- patches/webhook_in_addonproviders.yaml
-- patches/webhook_in_ipamproviders.yaml
-- patches/webhook_in_runtimeextensionproviders.yaml
+- path: patches/webhook_in_coreproviders.yaml
+- path: patches/webhook_in_bootstrapproviders.yaml
+- path: patches/webhook_in_controlplaneproviders.yaml
+- path: patches/webhook_in_infrastructureproviders.yaml
+- path: patches/webhook_in_addonproviders.yaml
+- path: patches/webhook_in_ipamproviders.yaml
+- path: patches/webhook_in_runtimeextensionproviders.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_coreproviders.yaml
-- patches/cainjection_in_bootstrapproviders.yaml
-- patches/cainjection_in_controlplaneproviders.yaml
-- patches/cainjection_in_infrastructureproviders.yaml
-- patches/cainjection_in_addonproviders.yaml
-- patches/cainjection_in_ipamproviders.yaml
-- patches/cainjection_in_runtimeextensionproviders.yaml
+- path: patches/cainjection_in_coreproviders.yaml
+- path: patches/cainjection_in_bootstrapproviders.yaml
+- path: patches/cainjection_in_controlplaneproviders.yaml
+- path: patches/cainjection_in_infrastructureproviders.yaml
+- path: patches/cainjection_in_addonproviders.yaml
+- path: patches/cainjection_in_ipamproviders.yaml
+- path: patches/cainjection_in_runtimeextensionproviders.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
